Feat: Endpoints de measurements